reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_circular_reference_generic.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithCircularReferenceGeneric<u8>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "id": {
        "kind": "Struct",
        "path": [
          "reflectapi::Empty"
        ],
        "disambiguator": 0
      },
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "struct",
      "id": {
        "kind": "Struct",
        "path": [
          "TestStructWithCircularReferenceGeneric"
        ],
        "disambiguator": 0
      },
      "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGeneric",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fields": {
        "named": [
          {
            "id": {
              "kind": "Field",
              "path": [
                "_f"
              ],
              "disambiguator": 0
            },
            "name": "_f",
            "type": {
              "name": "std::boxed::Box",
              "arguments": [
                {
                  "name": "reflectapi_demo::tests::generics::TestStructWithCircularReferenceGeneric",
                  "arguments": [
                    {
                      "name": "T"
                    }
                  ]
                }
              ]
            },
            "required": true
          },
          {
            "id": {
              "kind": "Field",
              "path": [
                "_f2"
              ],
              "disambiguator": 0
            },
            "name": "_f2",
            "type": {
              "name": "T"
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "id": {
        "kind": "Primitive",
        "path": [
          "std::boxed::Box"
        ],
        "disambiguator": 0
      },
      "name": "std::boxed::Box",
      "description": "std::boxed::Box pointer type",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fallback": {
        "name": "T"
      }
    },
    {
      "kind": "primitive",
      "id": {
        "kind": "Primitive",
        "path": [
          "u8"
        ],
        "disambiguator": 0
      },
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
