reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_circular_reference_generic_parent-3.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super :: into_input_rust_code :: <\nTestStructWithCircularReferenceGenericParent::<u8> > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn input_test(
            &self,
            input: super::types::reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericParent<u8>,
            headers: reflectapi::Empty,
        ) -> Result<reflectapi::Empty, reflectapi::rt::Error<reflectapi::Empty, C::Error>> {
            reflectapi::rt::__request_impl(&self.client, "/input_test", input, headers).await
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod generics {

                #[derive(Debug, serde::Serialize)]
                pub struct TestStructWithCircularReferenceGeneric<T> {
    pub _f: std::boxed::Box<super::super::super::reflectapi_demo::tests::generics::TestStructWithCircularReferenceGeneric<T>>,
    pub _f2: T,
}

                #[derive(Debug, serde::Serialize)]
                pub struct TestStructWithCircularReferenceGenericParent<T> {
    pub _f: std::boxed::Box<super::super::super::reflectapi_demo::tests::generics::TestStructWithCircularReferenceGeneric<super::super::super::reflectapi_demo::tests::generics::TestStructWithCircularReferenceGenericParent<T>>>,
    pub _f2: std::marker::PhantomData<T>,
}
            }
        }
    }
}
